Implemented system group assets
